--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,6 +1,7 @@
 # Specifies the HTTP endpoint of your Prisma API.
 
-endpoint: ''
+#endpoint: ''
+endpoint: https://us1.prisma.sh/tanner-gaucher/testdlete/dev
 
 # Defines your models, each model is mapped to the database as a table.
 datamodel: datamodel.prisma
